--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ html{
 }
 
 .container{
-    max-width: 1000px;
+    max-width: 1500px;
     margin-inline: auto;
     padding-inline: 3px;
 }
@@ -27,6 +27,10 @@ nav{
     padding: 10px;
     padding-left: 10px;
     font-size: 1.2rem;
+    position: fixed;
+    top: 0;
+    right:0;
+    
 }
 
 .container-icon2{
@@ -52,3 +56,36 @@ span{
     
     background-color: #4a4a4a;
 }
+
+/* Main */
+
+main{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 50px;
+    padding: 105px;
+}
+
+.mini-container{
+    display: flex;
+    position: relative;
+    
+}
+
+.micro{
+    height: 30px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    
+}
+
+.name{
+    position: absolute;
+    left: 30px;
+    bottom: 0;
+}
+
+
+    
