--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ html{
 }
 
 .container{
-    max-width: 1500px;
+    max-width: 1350px;
     margin-inline: auto;
     padding-inline: 3px;
 }
@@ -62,9 +62,10 @@ span{
 main{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
     margin-top: 50px;
-    padding: 105px;
+    padding: 25px;
 }
 
 .mini-container{
@@ -87,5 +88,27 @@ main{
     bottom: 0;
 }
 
+/* Footer */
 
-    
+footer{
+   display: flex;
+    height: 100px;
+    background-color: rgb(34, 34, 34);
+}
+
+
+.icon-footer-start{
+    display: flex;
+    justify-content: center;
+    height: 70px;
+}
+
+.arrow-up{
+    height: 25px;
+    padding-right: 15px;
+    margin-top: 25px;
+}
+
+.camera{
+    padding-right: 15px;
+}
