--- a/assets/style.css
+++ b/assets/style.css
@@ -91,36 +91,69 @@ main{
 /* Footer */
 
 footer{
-   display: flex;
+    display: flex;
+    justify-content: space-between;
    background-color: rgb(34, 34, 34);
+   position:fixed;
+   bottom: 0;
+   left: 0;
+   right: 0;
+
 }
 
 
 .icon-footer-start{
      display: flex;
      justify-content: flex-start;
-    flex-direction: column;
     position: relative; 
 }
 
  .arrow-up{
-    display: flex;
-   
-   height: 20px;
+    height: 20px;
    position: relative;
    top: 25px; 
 }
 
-.camera{
-   display: flex;
+.button {
+   height: 50px;
+   width: 50px;
    flex-direction: column;
    padding-left: 10px;
 }
 h3{
    color: white;
+   font-size: 13px; 
 }
 .icon-footer-center{
     display: flex;
-    flex-direction: column;
     
 }
+
+.icon4{
+    height: 25px;
+    width: 25px;
+   
+}
+.button-large{
+    width: 150px;
+}
+
+.icon-junior{
+    height: 30px;
+}
+
+.button-large2{
+    width: 150px;
+}
+
+.button-end{
+    height: 100%;
+    
+    background-color: #4a4a4a;
+}
+ h2{
+    height: 100%;
+    color: red;
+ }
+
+
